--- a/public/.htaccess
+++ b/public/.htaccess
@@ -10,7 +10,7 @@ Options -Indexes
 AddDefaultCharset UTF-8
 
 <IfModule mod_headers.c>
-  Header set Content-Security-Policy "img-src 'self' data:; default-src 'self';  style-src 'self' 'unsafe-inline';script-src 'self' 'nonce-NcTAri1XtyB8ZuGIio4C1dVtdtkxdj9YwwKMeJ19J8'; object-src 'none';base-uri 'none';"
+  Header set Content-Security-Policy "img-src 'self' data:; default-src 'self';  style-src 'self' 'unsafe-inline';script-src 'self' 'unsafe-inline' 'nonce-NcTAri1XtyB8ZuGIio4C1dVtdtkxdj9YwwKMeJ19J8'; object-src 'none';base-uri 'none';"
   Header set X-XSS-Protection "1; mode=block"
   Header set X-Frame-Options "DENY"
   <FilesMatch "\.(php|html|htm|xml)$">
